relay-pii/src/snapshots/relay_pii__processor__tests__scrub_span_data_http_strings_are_scrubbed.snap
---
source: relay-pii/src/processor.rs
expression: span
---
{
  "data": {
    "http": {
      "fragment": "ccnumber=[Filtered],process_id=123",
      "query": "ccnumber=[Filtered]&process_id=123"
    }
  },
  "_meta": {
    "data": {
      "http": {
        "fragment": {
          "": {
            "rem": [
              [
                "@creditcard:filter",
                "s",
                9,
                19
              ]
            ],
            "len": 40
          }
        },
        "query": {
          "": {
            "rem": [
              [
                "@creditcard:filter",
                "s",
                9,
                19
              ]
            ],
            "len": 40
          }
        }
      }
    }
  }
}
