relay-pii/src/snapshots/relay_pii__processor__tests__scrub_span_data_not_scrubbed.snap
---
source: relay-general/src/pii/processor.rs
expression: span
---
{
  "data": {
    "http": {
      "query": "dance=true"
    }
  }
}
