relay-pii/src/snapshots/relay_pii__processor__tests__scrub_span_data_untyped_props_are_scrubbed.snap
---
source: relay-pii/src/processor.rs
expression: span
---
{
  "data": {
    "more_untyped": {
      "ccnumber": "[Filtered]",
      "scrubbed": "yes",
      "typed": "no"
    },
    "untyped": "ccnumber=[Filtered]"
  },
  "_meta": {
    "data": {
      "more_untyped": {
        "ccnumber": {
          "": {
            "rem": [
              [
                "@creditcard:filter",
                "s",
                0,
                10
              ]
            ],
            "len": 16
          }
        }
      },
      "untyped": {
        "": {
          "rem": [
            [
              "@creditcard:filter",
              "s",
              9,
              19
            ]
          ],
          "len": 25
        }
      }
    }
  }
}
