relay-pii/src/snapshots/relay_pii__processor__tests__sentry_user.snap
---
source: relay-pii/src/processor.rs
expression: "&data"
---
Event {
    id: ~,
    level: ~,
    version: ~,
    ty: ~,
    fingerprint: ~,
    culprit: ~,
    transaction: ~,
    transaction_info: ~,
    time_spent: ~,
    logentry: ~,
    logger: ~,
    modules: ~,
    platform: ~,
    timestamp: ~,
    start_timestamp: ~,
    received: ~,
    server_name: ~,
    release: ~,
    dist: ~,
    environment: ~,
    site: ~,
    user: User {
        id: ~,
        email: ~,
        ip_address: Meta {
            remarks: [
                Remark {
                    ty: Substituted,
                    rule_id: "@ip:replace",
                    range: Some(
                        (
                            0,
                            4,
                        ),
                    ),
                },
                Remark {
                    ty: Removed,
                    rule_id: "@anything:remove",
                    range: None,
                },
            ],
            errors: [],
            original_length: Some(
                13,
            ),
            original_value: None,
        },
        username: ~,
        name: ~,
        sentry_user: Annotated(
            "ip:[ip]",
            Meta {
                remarks: [
                    Remark {
                        ty: Substituted,
                        rule_id: "@ip:replace",
                        range: Some(
                            (
                                3,
                                7,
                            ),
                        ),
                    },
                ],
                errors: [],
                original_length: Some(
                    16,
                ),
                original_value: None,
            },
        ),
        geo: ~,
        segment: ~,
        data: ~,
        other: {},
    },
    request: ~,
    contexts: ~,
    breadcrumbs: ~,
    exceptions: ~,
    stacktrace: ~,
    template: ~,
    threads: ~,
    tags: ~,
    extra: ~,
    debug_meta: ~,
    client_sdk: ~,
    ingest_path: ~,
    errors: ~,
    key_id: ~,
    project: ~,
    grouping_config: ~,
    checksum: ~,
    csp: ~,
    spans: ~,
    measurements: ~,
    breakdowns: ~,
    scraping_attempts: ~,
    _metrics: ~,
    _dsc: ~,
    performance_issues_spans: ~,
    other: {},
}
