relay-pii/src/snapshots/relay_pii__processor__tests__trace_route_params_scrubbed.snap
---
source: relay-pii/src/processor.rs
expression: trace_context
---
{
  "trace_id": "4c79f60c11214eb38604f4ae0781bfb2",
  "span_id": "fa90fdead5f74052",
  "data": {
    "previousRoute": {
      "params": {
        "password": "[Filtered]"
      }
    }
  },
  "type": "trace",
  "_meta": {
    "data": {
      "previousRoute": {
        "params": {
          "password": {
            "": {
              "rem": [
                [
                  "@password:filter",
                  "s",
                  0,
                  10
                ]
              ],
              "len": 4
            }
          }
        }
      }
    }
  }
}
